Changes for 1.4.7:

 - [ZBX-430] improved configuration scripts (Sasha)
 - [ZBX-103] fixed escaping in sql queries (Sasha)
 - [ZBX-424] fixed possible server crash while importing XML (Sasha)
 - [ZBX-420] added support of log files in screens (Sasha)
 - [ZBX-418] fixed possible server crash while processing macros (Sasha) 
 - [ZBX-370] fixed cpu.c for system.cpu.load[] processing (Sasha)
 - [ZBX-412] fixed malfunction of triggers based on log[] and eventlog[] (Sasha)
 - [DEV-195] added support of source ip address (Sasha)
 - added Korean locale [thnx to Kodai] (Artem)
 - updated Japanese locale [thnx to Kodai] (Artem)

Changes for 1.4.6:

 - [ZBX-404] fixed update of item "Download speed for scenario '...'" (Sasha)
 - [ZBX-389] added escaping in SQL statement in DBupdate_graph (Sasha)
 - [ZBX-286] fixed possible server crash on some platforms (Sasha)
 - [ZBX-167] fixed typo in triggers update function (Artem)
 - [ZBX-272] fixed default link to local interface in *BSD for net.if* items (Sasha)
 - [ZBX-386] fixed possible agent crash in processing of active checks (Sasha)
 - [ZBX-379] added error checking for accept on server side (Sasha) 
 - [ZBX-365] added support of long process names for proc.num and proc.mem, Linux 2.6 (Sasha)
 - [ZBX-78] fixed detection of net-snmp libs (Alexei)
 - [ZBX-362] added mass template linkage to hosts, mod by sergio.cricca (Artem)
 - [ZBX-361] fixed possible "division by zero" in Monitoring/Triggers screen (Sasha)
 - [ZBX-360] fixed possible warning messages under Oracle while updating items (Sasha)
 - [ZBX-357] fixed problem with clearing error message for activated items (Sasha)
 - [ZBX-339] fixes problem in frontend with clearing history for text items (Sasha) 
 - [ZBX-44] added timeout handler for processing net.tcp.* items (Sasha)
 - [ZBX-356] fixed possible server crash for non *log() items with type 'log' (Sasha)
 - [ZBX-354] added support of new parameter sec|#num for str(),regexp() and iregexp() (Sasha)