@@ -1,5 +1,6 @@
 Changes for 1.4.7:
 
+ - [DEV-198] improved displaying of disabled items in the maps (sasha)
  - [ZBX-430] improved configuration scripts (Sasha)
  - [ZBX-103] fixed escaping in sql queries (Sasha)
  - [ZBX-424] fixed possible server crash while importing XML (Sasha)
